// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders props when passed in 1`] = `
<button
  className="sc-bdVaJa dozLaS"
  color="blue"
>
  I'm a blue button
</button>
`;

exports[`renders successfully 1`] = `
<button
  className="sc-bdVaJa jahWkE"
  color="white"
/>
`;

exports[`renders text when passed in successfully 1`] = `
<button
  className="sc-bdVaJa jahWkE"
  color="white"
>
  I'm a button
</button>
`;
